# rlgame

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
Public/Resources/Textures/: dirt.png~
Public/Shaders/: cam.frag  cam.vert  shader.vert  unit.curve.comp  unit.face.comp  unit.frag  unit.lightning.frag  unit.vert
Public/Textures/: rl.unit.BlackIron  rl.unit.Grass  rl.unit.Iron
Tests/: UnitChunkBufferTest.cpp  UnitDynamicTextureTest.cpp  UnitRegistryTest.cpp
rl/Base/: Binding.ixx  CameraProvider.cpp  CameraProvider.h  DeviceInputReceiver.cpp  DeviceInputReceiver.h  Game.cpp  Game.h  Game.ixx  IStateDrawable.ixx  IStateModel.ixx  IUpdatable.h  IUpdatable.ixx  InputReceiver.cpp  InputReceiver.h  InputReceiver.ixx  Main.cpp  Shader.cpp  Shader.ixx  ShaderFactory.cpp  ShaderFactory.h  SimplexNoise.cpp  SimplexNoise.h  SimplexNoise.ixx  StateDrawable.h  StateDrawable.ixx  StateModel.h  StateModel.ixx  Texture2.cpp  Texture2.h  Texture2.ixx  Texture2Binding.cpp  Texture2Lightning.cpp  Texture2Normal.cpp  Texture2Vk.cpp  UserInput.cpp  UserInput.ixx
rl/Client/Render/: CameraProvider.cpp  CameraProvider.h  CameraRenderer.cpp  UnitRenderer.cpp
rl/Client/Render/Unit/: UnitRenderer.cpp  UnitRenderer.h  UnitRendererAOTextures.cpp  UnitRendererAOTextures.h  UnitRendererAOTextures.ixx  UnitRendererBarriers.cpp  UnitRendererBarriers.h  UnitRendererBarriers.ixx  UnitRendererBasicBuffer.h  UnitRendererBasicBuffer.ixx  UnitRendererBuffer.cpp  UnitRendererCleanup.cpp  UnitRendererCleanup.h  UnitRendererCleanup.ixx  UnitRendererCommandBuffers.cpp  UnitRendererCommandBuffers.h  UnitRendererCommandBuffers.ixx  UnitRendererComputeBuffer.cpp  UnitRendererComputePipeline.cpp  UnitRendererComputePipeline.h  UnitRendererComputePipeline.ixx  UnitRendererCurvatureCompute.cpp  UnitRendererCurvatureCompute.h  UnitRendererCurvatureCompute.ixx  UnitRendererDescriptorSets.cpp  UnitRendererDescriptorSets.h  UnitRendererDescriptorSets.ixx  UnitRendererDraw.cpp  UnitRendererDraw.h  UnitRendererDraw.ixx  UnitRendererDrawCompute.cpp  UnitRendererDrawCompute.h  UnitRendererDrawCompute.ixx  UnitRendererFrustum.cpp  UnitRendererFrustum.h  UnitRendererFrustum.ixx  UnitRendererGraphicsPipeline.cpp  UnitRendererGraphicsPipeline.h  UnitRendererGraphicsPipeline.ixx  UnitRendererIndirectDraw.cpp  (+31 more)
rl/Client/State/: CameraState.cpp  CameraState.h  CameraState.ixx  UnitState.cpp  UnitState.h  UnitState.ixx
rl/Player/: IPlayer.ixx  Player.cpp  Player.ixx  PlayerCamera.cpp  PlayerCamera.ixx  PlayerCameraController.cpp  PlayerCameraController.ixx  PlayerController.cpp  PlayerController.ixx  PlayerProvider.ixx
rl/RayLog/: IRayLogSerializable.ixx  RayLog.ixx  RayLogColorPrinter.ixx  RayLogConfig.ixx  RayLogFatalHandler.ixx  RayLogFileOutput.ixx  RayLogFormatParser.ixx  RayLogFormatter.ixx  RayLogLevelPrinter.ixx  RayLogMacro.ixx  RayLogMessage.ixx  RayLogMessageBuilder.ixx  RayLogPlatform.ixx  RayLogPlatformOutput.ixx  RayLogRingBuffer.ixx  RayLogStackTrace.ixx  RayLogSymbolDemangler.ixx  RayLogThreadPool.ixx  RayLogTimestamp.ixx  RayLogUuid.ixx  RayLogger.ixx
rl/Shaders/: unit.face.comp  unit.frag  unit.shadow.vert  unit.tessel.comp  unit.vert
rl/Shaders/Simplex/: simplex.comp  simplex.gradients.glsl  simplex.init.comp  simplex.noise2d.glsl  simplex.perm.glsl
rl/Ui/: GuiCamera.cpp  UiCamera.cpp
rl/World/: Camera.cpp  Camera.h  Camera.ixx
rl/World/Chunk/: UnitChunkBuffer.cpp  UnitChunkBuffer.h  UnitChunkBuffer.ixx  UnitChunkBufferGPUSimplex.cpp  UnitChunkBufferGPUSimplex.ixx
rl/World/Unit/: Unit.cpp  Unit.h  Unit.ixx  UnitAir.cpp  UnitAir.ixx  UnitDynamicTexture.cpp  UnitDynamicTexture.h  UnitDynamicTexture.ixx  UnitGrass.cpp  UnitGrass.h  UnitGrass.ixx  UnitPropertyStrategy.h  UnitPropertyStrategy.ixx  UnitRegister.h  UnitRegister.ixx  UnitRegistry.cpp  UnitRegistry.h  UnitRegistry.ixx  UnitResourceName.h  UnitResourceName.ixx
